fix overflow issues and make api key banner dismissable

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -140,11 +140,3 @@ html {
 	@apply overscroll-none;
 	color-scheme: dark;
 }
-
-.bg-popover {
-	--input: var(--background);
-}
-
-.bg-card {
-	--input: var(--background);
-}
